# alembic-db-migration

./: LICENSE  README.md
.github/workflows/: generate-migration.yaml
backend/: database.py  pyproject.toml
backend/db/: alembic.ini
backend/db/migrations/: env.py
backend/db/migrations/versions/: 05297d654543_auto_generated_migration_by_github_.py  d8b6ed653e3d_create_user_table.py
backend/models/: user.py
